turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: ';' expected but integer literal found.
val GAUCHE : Int 2
                 ^Turmite:30: error: ')' expected but '(' found.
    case (rule(state)(couleurActuelle)(1) == STOP)    => 
                     ^Turmite:30: error: '=>' expected but '(' found.
    case (rule(state)(couleurActuelle)(1) == STOP)    => 
                                      ^